4.4.0
-----
1. Use detailed subtoolbar for some (e.g Spotty) artist and album listings.

4.3.2
-----
1. Revert back to '1' for enabled bool server side items.
2. If jumplist only contains headers (e.g. as in 'New Music') then show if
   there are at least 5 times the number of items as there are jumplist
   entries.

4.3.1
-----
1. Fix view height issues when rotating.
2. Fix closing of 'Add to playlist' dialog.

4.3.0
-----
 1. Add option to move dialogs closer to click/touch position.
 2. If using unpinned queue without background image then have a
    semi-transparent background that blurs items below.
 3. Remove MySqueezebox.com related code, as service is shutdown.
 4. Add option to auto-close unpinned queue after 30 seconds.
 5. Change order of add/play buttons to be '(+) (>)'
 6. If play shuffled option is enabled, then show play shuffle icon in detailed
    sub-toolbar (if space) and when hovering.
 7. Add 'Play next' action to detailed sub-toolbar (if space, and play shuffle
    disabled) and when hovering.
 8. In MAI track details always show composer, conductor, band if tags exist,
    regardless of whether these are used for now-playing, etc. or not.
 9. Alter ratio for when now-playing landscape is treated as 'wide'.
10. For landscape now-playing always place cover on left, and have details
    fill remaining space - even if controls span view.
11. If queue is not pinned then clickin on track count in now-playing bar will
    toggle queue in desktop layout.
12. Fix hover play-next/shuffled grid icons for light themes.
13. Fix handling of server-side bool options - LMS sends 'on' not '1'
14. If very wide then show short text next to play, add, insert, and shuffle
    actions in sub-toolbar.
15. Group all albums lists int releases.
16. Use 'Releases' instead of 'Albums'.
17. Fix 'Reload' action in 'Random albums/releases' within genre.
18. Highlight section headers if match during 'Search within list'.
19. Re-order some '...' menu entries.