@@ -10,6 +10,7 @@ var lmsOptions = {techInfo: getLocalStorageBool('techInfo', false),
                   conductorGenres: new Set(),
                   composerGenres: new Set(),
                   bandGenres: new Set(),
+                  maiComposer: getLocalStorageBool('maiComposer', false),
                   showConductor: getLocalStorageBool('showConductor', false),
                   showComposer: getLocalStorageBool('showComposer', true),
                   showBand: getLocalStorageBool('showBand', true),
